Fixed vertical spacing on browsers that do not support animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -325,15 +325,19 @@ a.choice {
 #question-slider {
   	position:relative;
   	width:106%;
-	height: 4em;
+	height: auto;
 	text-align: center;
   	margin: 1em 0 3em -3%;
 	margin-bottom: 3em;
 }
+.cssanimations {
+	height: 4em;
+}
+
 #question-slider h2 {
 	width: 100%; 	
 }
-#question-slider h2.q0 {
+.cssanimations #question-slider h2.q0 {
 	height: 3.5em !important; 	
 }
 .cssanimations #question-slider h2 {
